[gd_scene load_steps=6 format=3 uid="uid://dchlg7ehd5dgp"]

[ext_resource type="Script" uid="uid://cfxdn5c28ybtf" path="res://mod_loader/developer/developer.gd" id="1_6rilq"]
[ext_resource type="Texture2D" uid="uid://drpbh8f2efant" path="res://RobotIcon.png" id="1_i5bn6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i5bn6"]

[sub_resource type="LabelSettings" id="LabelSettings_i5bn6"]
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_6rilq"]
font_size = 50

[node name="developer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6rilq")

[node name="account_panel" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="account_panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TabContainer" type="TabContainer" parent="account_panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/tab_focus = SubResource("StyleBoxEmpty_i5bn6")
theme_override_styles/tab_disabled = SubResource("StyleBoxEmpty_i5bn6")
theme_override_styles/tabbar_background = SubResource("StyleBoxEmpty_i5bn6")
theme_override_styles/panel = SubResource("StyleBoxEmpty_i5bn6")
theme_override_styles/tab_selected = SubResource("StyleBoxEmpty_i5bn6")
theme_override_styles/tab_hovered = SubResource("StyleBoxEmpty_i5bn6")
theme_override_styles/tab_unselected = SubResource("StyleBoxEmpty_i5bn6")
current_tab = 1
clip_tabs = false
tabs_visible = false

[node name="login" type="Control" parent="account_panel/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="login_id" type="LineEdit" parent="account_panel/TabContainer/login"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.257813
anchor_top = 0.248457
anchor_right = 0.834201
anchor_bottom = 0.342593
offset_bottom = -1.52588e-05
placeholder_text = "用户ID"
caret_blink = true
metadata/_edit_use_anchors_ = true

[node name="login_password" type="LineEdit" parent="account_panel/TabContainer/login"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.257813
anchor_top = 0.419753
anchor_right = 0.834201
anchor_bottom = 0.513889
offset_top = -3.05176e-05
placeholder_text = "密码"
secret = true
secret_character = "喵"
metadata/_edit_use_anchors_ = true

[node name="login" type="Button" parent="account_panel/TabContainer/login"]
layout_mode = 0
anchor_left = 0.257813
anchor_top = 0.677469
anchor_right = 0.377604
anchor_bottom = 0.751543
text = "登录"
metadata/_edit_use_anchors_ = true

[node name="Title" type="Label" parent="account_panel/TabContainer/login"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0164931
anchor_right = 0.446181
anchor_bottom = 0.179012
text = "开发者登录"
label_settings = SubResource("LabelSettings_i5bn6")
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="goto_register" type="LinkButton" parent="account_panel/TabContainer/login"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.446181
anchor_top = 0.719136
anchor_right = 0.546875
anchor_bottom = 0.768519
text = "没有账户？前往注册"
metadata/_edit_use_anchors_ = true

[node name="register" type="Control" parent="account_panel/TabContainer"]
layout_mode = 2
metadata/_tab_index = 1

[node name="Label" type="Label" parent="account_panel/TabContainer/register"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0164931
anchor_right = 0.446181
anchor_bottom = 0.179012
text = "开发者注册"
label_settings = SubResource("LabelSettings_i5bn6")
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="register_name" type="LineEdit" parent="account_panel/TabContainer/register"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.257813
anchor_top = 0.248457
anchor_right = 0.834201
anchor_bottom = 0.342593
offset_bottom = -1.52588e-05
placeholder_text = "用户名"
caret_blink = true
metadata/_edit_use_anchors_ = true

[node name="register_password" type="LineEdit" parent="account_panel/TabContainer/register"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.257813
anchor_top = 0.419753
anchor_right = 0.834201
anchor_bottom = 0.513889
offset_top = -3.05176e-05
placeholder_text = "密码"
secret = true
secret_character = "汪"
metadata/_edit_use_anchors_ = true

[node name="register" type="Button" parent="account_panel/TabContainer/register"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.257813
anchor_top = 0.677469
anchor_right = 0.377604
anchor_bottom = 0.751543
text = "注册"
metadata/_edit_use_anchors_ = true

[node name="author_id" type="LineEdit" parent="account_panel/TabContainer/register"]
layout_mode = 0
anchor_left = 0.415799
anchor_top = 0.677469
anchor_right = 0.861979
anchor_bottom = 0.770062
editable = false
metadata/_edit_use_anchors_ = true

[node name="goto_login" type="LinkButton" parent="account_panel/TabContainer/register"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.446181
anchor_top = 0.719136
anchor_right = 0.546875
anchor_bottom = 0.768519
text = "已有账户？前往登录"
metadata/_edit_use_anchors_ = true

[node name="mes" type="Control" parent="account_panel/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="ColorRect" type="ColorRect" parent="account_panel/TabContainer/mes"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="account_panel/TabContainer/mes"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0460069
anchor_top = 0.12963
anchor_right = 0.256577
anchor_bottom = 0.491922
texture = ExtResource("1_i5bn6")
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="account_panel/TabContainer/mes"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3125
anchor_top = 0.179012
anchor_right = 0.74419
anchor_bottom = 0.461382
text = "开发者名字"
label_settings = SubResource("LabelSettings_6rilq")
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="quit_login" type="Button" parent="account_panel/TabContainer/mes"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.257813
anchor_top = 0.677469
anchor_right = 0.377604
anchor_bottom = 0.751543
text = "退出登录"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="account_panel/TabContainer/login/login" to="." method="_on_login_pressed"]
[connection signal="pressed" from="account_panel/TabContainer/login/goto_register" to="." method="_on_goto_register_pressed"]
[connection signal="pressed" from="account_panel/TabContainer/register/register" to="." method="_on_register_pressed"]
[connection signal="pressed" from="account_panel/TabContainer/register/goto_login" to="." method="_on_goto_login_pressed"]
[connection signal="pressed" from="account_panel/TabContainer/mes/quit_login" to="." method="_on_quit_login_pressed"]
